etapa5/codigo/build/parser.output
Terminals unused in grammar

    TK_ERRO


Grammar

    0 $accept: programa $end

    1 programa: lista_de_funcoes
    2         | ε

    3 lista_de_funcoes: funcao lista_de_funcoes
    4                 | funcao

    5 tipo: TK_PR_INT
    6     | TK_PR_FLOAT

    7 funcao: cabecalho corpo

    8 cabecalho: TK_IDENTIFICADOR '=' lista_de_parametros '>' tipo
    9          | TK_IDENTIFICADOR '=' '>' tipo

   10 lista_de_parametros: lista_de_parametros TK_OC_OR parametro
   11                    | parametro

   12 parametro: TK_IDENTIFICADOR '<' '-' tipo

   13 corpo: bloco_comandos

   14 bloco_comandos: '{' '}'
   15               | '{' sequencia_de_comandos '}'

   16 sequencia_de_comandos: comando_simples ';'
   17                      | comando_simples ';' sequencia_de_comandos

   18 comando_simples: bloco_comandos
   19                | declaracao_variavel
   20                | comando_atribuicao
   21                | chamada_funcao
   22                | comando_retorno
   23                | comando_controle_fluxo

   24 declaracao_variavel: tipo lista_de_identificadores

   25 lista_de_identificadores: identificador
   26                         | identificador ',' lista_de_identificadores

   27 identificador: TK_IDENTIFICADOR
   28              | TK_IDENTIFICADOR TK_OC_LE TK_LIT_FLOAT
   29              | TK_IDENTIFICADOR TK_OC_LE TK_LIT_INT

   30 comando_atribuicao: TK_IDENTIFICADOR '=' expressao

   31 chamada_funcao: TK_IDENTIFICADOR '(' lista_argumentos ')'

   32 lista_argumentos: expressao ',' lista_argumentos
   33                 | expressao

   34 comando_retorno: TK_PR_RETURN expressao

   35 comando_controle_fluxo: TK_PR_IF '(' expressao ')' bloco_comandos
   36                       | TK_PR_IF '(' expressao ')' bloco_comandos TK_PR_ELSE bloco_comandos
   37                       | TK_PR_WHILE '(' expressao ')' bloco_comandos

   38 expressao: expr7

   39 expr7: expr7 TK_OC_OR expr6
   40      | expr6

   41 expr6: expr6 TK_OC_AND expr5
   42      | expr5

   43 expr5: expr5 TK_OC_NE expr4
   44      | expr5 TK_OC_EQ expr4
   45      | expr4

   46 expr4: expr4 '<' expr3
   47      | expr4 '>' expr3
   48      | expr4 TK_OC_LE expr3
   49      | expr4 TK_OC_GE expr3
   50      | expr3

   51 expr3: expr3 '+' expr2
   52      | expr3 '-' expr2
   53      | expr2

   54 expr2: expr2 '*' expr1
   55      | expr2 '/' expr1
   56      | expr2 '%' expr1
   57      | expr1

   58 expr1: '-' expr1
   59      | '!' expr1
   60      | TK_IDENTIFICADOR
   61      | TK_LIT_FLOAT
   62      | TK_LIT_INT
   63      | chamada_funcao
   64      | '(' expressao ')'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 59
    '%' (37) 56
    '(' (40) 31 35 36 37 64
    ')' (41) 31 35 36 37 64
    '*' (42) 54
    '+' (43) 51
    ',' (44) 26 32
    '-' (45) 12 52 58
    '/' (47) 55
    ';' (59) 16 17
    '<' (60) 12 46
    '=' (61) 8 9 30
    '>' (62) 8 9 47
    '{' (123) 14 15
    '}' (125) 14 15
    error (256)
    TK_PR_INT (258) 5
    TK_PR_FLOAT (259) 6
    TK_PR_IF (260) 35 36
    TK_PR_ELSE (261) 36
    TK_PR_WHILE (262) 37
    TK_PR_RETURN (263) 34
    TK_OC_LE (264) 28 29 48
    TK_OC_GE (265) 49
    TK_OC_EQ (266) 44
    TK_OC_NE (267) 43
    TK_OC_AND (268) 41
    TK_OC_OR (269) 10 39
    TK_IDENTIFICADOR <valor_lexico> (270) 8 9 12 27 28 29 30 31 60
    TK_LIT_INT <valor_lexico> (271) 29 62
    TK_LIT_FLOAT <valor_lexico> (272) 28 61
    TK_ERRO (273)


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    programa <arvore> (35)
        on left: 1 2
        on right: 0
    lista_de_funcoes <arvore> (36)
        on left: 3 4
        on right: 1 3
    tipo (37)
        on left: 5 6
        on right: 8 9 12 24
    funcao <arvore> (38)
        on left: 7
        on right: 3 4
    cabecalho <arvore> (39)
        on left: 8 9
        on right: 7
    lista_de_parametros <arvore> (40)
        on left: 10 11
        on right: 8 10
    parametro <arvore> (41)
        on left: 12
        on right: 10 11
    corpo <arvore> (42)
        on left: 13
        on right: 7
    bloco_comandos <arvore> (43)
        on left: 14 15
        on right: 13 18 35 36 37
    sequencia_de_comandos <arvore> (44)
        on left: 16 17
        on right: 15 17
    comando_simples <arvore> (45)
        on left: 18 19 20 21 22 23
        on right: 16 17
    declaracao_variavel <arvore> (46)
        on left: 24
        on right: 19
    lista_de_identificadores <arvore> (47)
        on left: 25 26
        on right: 24 26
    identificador <arvore> (48)
        on left: 27 28 29
        on right: 25 26
    comando_atribuicao <arvore> (49)
        on left: 30
        on right: 20
    chamada_funcao <arvore> (50)
        on left: 31
        on right: 21 63
    lista_argumentos <arvore> (51)
        on left: 32 33
        on right: 31 32
    comando_retorno <arvore> (52)
        on left: 34
        on right: 22
    comando_controle_fluxo <arvore> (53)
        on left: 35 36 37
        on right: 23
    expressao <arvore> (54)
        on left: 38
        on right: 30 32 33 34 35 36 37 64
    expr7 <arvore> (55)
        on left: 39 40
        on right: 38 39
    expr6 <arvore> (56)
        on left: 41 42
        on right: 39 40 41
    expr5 <arvore> (57)
        on left: 43 44 45
        on right: 41 42 43 44
    expr4 <arvore> (58)
        on left: 46 47 48 49 50
        on right: 43 44 45 46 47 48 49
    expr3 <arvore> (59)
        on left: 51 52 53
        on right: 46 47 48 49 50 51 52
    expr2 <arvore> (60)
        on left: 54 55 56 57
        on right: 51 52 53 54 55 56
    expr1 <arvore> (61)
        on left: 58 59 60 61 62 63 64
        on right: 54 55 56 57 58 59


State 0

    0 $accept: • programa $end

    TK_IDENTIFICADOR  shift, and go to state 1

    $default  reduce using rule 2 (programa)

    programa          go to state 2
    lista_de_funcoes  go to state 3
    funcao            go to state 4
    cabecalho         go to state 5


State 1

    8 cabecalho: TK_IDENTIFICADOR • '=' lista_de_parametros '>' tipo
    9          | TK_IDENTIFICADOR • '=' '>' tipo

    '='  shift, and go to state 6


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 7


State 3

    1 programa: lista_de_funcoes •

    $default  reduce using rule 1 (programa)


State 4

    3 lista_de_funcoes: funcao • lista_de_funcoes
    4                 | funcao •

    TK_IDENTIFICADOR  shift, and go to state 1

    $default  reduce using rule 4 (lista_de_funcoes)

    lista_de_funcoes  go to state 8
    funcao            go to state 4
    cabecalho         go to state 5


State 5

    7 funcao: cabecalho • corpo

    '{'  shift, and go to state 9

    corpo           go to state 10
    bloco_comandos  go to state 11


State 6

    8 cabecalho: TK_IDENTIFICADOR '=' • lista_de_parametros '>' tipo
    9          | TK_IDENTIFICADOR '=' • '>' tipo

    TK_IDENTIFICADOR  shift, and go to state 12
    '>'               shift, and go to state 13

    lista_de_parametros  go to state 14
    parametro            go to state 15


State 7

    0 $accept: programa $end •

    $default  accept


State 8

    3 lista_de_funcoes: funcao lista_de_funcoes •

    $default  reduce using rule 3 (lista_de_funcoes)


State 9

   14 bloco_comandos: '{' • '}'
   15               | '{' • sequencia_de_comandos '}'

    TK_PR_INT         shift, and go to state 16
    TK_PR_FLOAT       shift, and go to state 17
    TK_PR_IF          shift, and go to state 18
    TK_PR_WHILE       shift, and go to state 19
    TK_PR_RETURN      shift, and go to state 20
    TK_IDENTIFICADOR  shift, and go to state 21
    '{'               shift, and go to state 9
    '}'               shift, and go to state 22

    tipo                    go to state 23
    bloco_comandos          go to state 24
    sequencia_de_comandos   go to state 25
    comando_simples         go to state 26
    declaracao_variavel     go to state 27
    comando_atribuicao      go to state 28
    chamada_funcao          go to state 29
    comando_retorno         go to state 30
    comando_controle_fluxo  go to state 31


State 10

    7 funcao: cabecalho corpo •

    $default  reduce using rule 7 (funcao)


State 11

   13 corpo: bloco_comandos •

    $default  reduce using rule 13 (corpo)


State 12

   12 parametro: TK_IDENTIFICADOR • '<' '-' tipo

    '<'  shift, and go to state 32


State 13

    9 cabecalho: TK_IDENTIFICADOR '=' '>' • tipo

    TK_PR_INT    shift, and go to state 16
    TK_PR_FLOAT  shift, and go to state 17

    tipo  go to state 33


State 14

    8 cabecalho: TK_IDENTIFICADOR '=' lista_de_parametros • '>' tipo
   10 lista_de_parametros: lista_de_parametros • TK_OC_OR parametro

    TK_OC_OR  shift, and go to state 34
    '>'       shift, and go to state 35


State 15

   11 lista_de_parametros: parametro •

    $default  reduce using rule 11 (lista_de_parametros)


State 16

    5 tipo: TK_PR_INT •

    $default  reduce using rule 5 (tipo)


State 17

    6 tipo: TK_PR_FLOAT •

    $default  reduce using rule 6 (tipo)


State 18

   35 comando_controle_fluxo: TK_PR_IF • '(' expressao ')' bloco_comandos
   36                       | TK_PR_IF • '(' expressao ')' bloco_comandos TK_PR_ELSE bloco_comandos

    '('  shift, and go to state 36


State 19

   37 comando_controle_fluxo: TK_PR_WHILE • '(' expressao ')' bloco_comandos

    '('  shift, and go to state 37


State 20

   34 comando_retorno: TK_PR_RETURN • expressao

    TK_IDENTIFICADOR  shift, and go to state 38
    TK_LIT_INT        shift, and go to state 39
    TK_LIT_FLOAT      shift, and go to state 40
    '-'               shift, and go to state 41
    '('               shift, and go to state 42
    '!'               shift, and go to state 43

    chamada_funcao  go to state 44
    expressao       go to state 45
    expr7           go to state 46
    expr6           go to state 47
    expr5           go to state 48
    expr4           go to state 49
    expr3           go to state 50
    expr2           go to state 51
    expr1           go to state 52


State 21

   30 comando_atribuicao: TK_IDENTIFICADOR • '=' expressao
   31 chamada_funcao: TK_IDENTIFICADOR • '(' lista_argumentos ')'

    '='  shift, and go to state 53
    '('  shift, and go to state 54


State 22

   14 bloco_comandos: '{' '}' •

    $default  reduce using rule 14 (bloco_comandos)


State 23

   24 declaracao_variavel: tipo • lista_de_identificadores

    TK_IDENTIFICADOR  shift, and go to state 55

    lista_de_identificadores  go to state 56
    identificador             go to state 57


State 24

   18 comando_simples: bloco_comandos •

    $default  reduce using rule 18 (comando_simples)


State 25

   15 bloco_comandos: '{' sequencia_de_comandos • '}'

    '}'  shift, and go to state 58


State 26

   16 sequencia_de_comandos: comando_simples • ';'
   17                      | comando_simples • ';' sequencia_de_comandos

    ';'  shift, and go to state 59


State 27

   19 comando_simples: declaracao_variavel •

    $default  reduce using rule 19 (comando_simples)


State 28

   20 comando_simples: comando_atribuicao •

    $default  reduce using rule 20 (comando_simples)


State 29

   21 comando_simples: chamada_funcao •

    $default  reduce using rule 21 (comando_simples)


State 30

   22 comando_simples: comando_retorno •

    $default  reduce using rule 22 (comando_simples)


State 31

   23 comando_simples: comando_controle_fluxo •

    $default  reduce using rule 23 (comando_simples)


State 32

   12 parametro: TK_IDENTIFICADOR '<' • '-' tipo

    '-'  shift, and go to state 60


State 33

    9 cabecalho: TK_IDENTIFICADOR '=' '>' tipo •

    $default  reduce using rule 9 (cabecalho)


State 34

   10 lista_de_parametros: lista_de_parametros TK_OC_OR • parametro

    TK_IDENTIFICADOR  shift, and go to state 12

    parametro  go to state 61


State 35

    8 cabecalho: TK_IDENTIFICADOR '=' lista_de_parametros '>' • tipo

    TK_PR_INT    shift, and go to state 16
    TK_PR_FLOAT  shift, and go to state 17

    tipo  go to state 62


State 36

   35 comando_controle_fluxo: TK_PR_IF '(' • expressao ')' bloco_comandos
   36                       | TK_PR_IF '(' • expressao ')' bloco_comandos TK_PR_ELSE bloco_comandos

    TK_IDENTIFICADOR  shift, and go to state 38
    TK_LIT_INT        shift, and go to state 39
    TK_LIT_FLOAT      shift, and go to state 40
    '-'               shift, and go to state 41
    '('               shift, and go to state 42
    '!'               shift, and go to state 43

    chamada_funcao  go to state 44
    expressao       go to state 63
    expr7           go to state 46
    expr6           go to state 47
    expr5           go to state 48
    expr4           go to state 49
    expr3           go to state 50
    expr2           go to state 51
    expr1           go to state 52


State 37

   37 comando_controle_fluxo: TK_PR_WHILE '(' • expressao ')' bloco_comandos

    TK_IDENTIFICADOR  shift, and go to state 38
    TK_LIT_INT        shift, and go to state 39
    TK_LIT_FLOAT      shift, and go to state 40
    '-'               shift, and go to state 41
    '('               shift, and go to state 42
    '!'               shift, and go to state 43

    chamada_funcao  go to state 44
    expressao       go to state 64
    expr7           go to state 46
    expr6           go to state 47
    expr5           go to state 48
    expr4           go to state 49
    expr3           go to state 50
    expr2           go to state 51
    expr1           go to state 52


State 38

   31 chamada_funcao: TK_IDENTIFICADOR • '(' lista_argumentos ')'
   60 expr1: TK_IDENTIFICADOR •

    '('  shift, and go to state 54

    $default  reduce using rule 60 (expr1)


State 39

   62 expr1: TK_LIT_INT •

    $default  reduce using rule 62 (expr1)


State 40

   61 expr1: TK_LIT_FLOAT •

    $default  reduce using rule 61 (expr1)


State 41

   58 expr1: '-' • expr1

    TK_IDENTIFICADOR  shift, and go to state 38
    TK_LIT_INT        shift, and go to state 39
    TK_LIT_FLOAT      shift, and go to state 40
    '-'               shift, and go to state 41
    '('               shift, and go to state 42
    '!'               shift, and go to state 43

    chamada_funcao  go to state 44
    expr1           go to state 65


State 42

   64 expr1: '(' • expressao ')'

    TK_IDENTIFICADOR  shift, and go to state 38
    TK_LIT_INT        shift, and go to state 39
    TK_LIT_FLOAT      shift, and go to state 40
    '-'               shift, and go to state 41
    '('               shift, and go to state 42
    '!'               shift, and go to state 43

    chamada_funcao  go to state 44
    expressao       go to state 66
    expr7           go to state 46
    expr6           go to state 47
    expr5           go to state 48
    expr4           go to state 49
    expr3           go to state 50
    expr2           go to state 51
    expr1           go to state 52


State 43

   59 expr1: '!' • expr1

    TK_IDENTIFICADOR  shift, and go to state 38
    TK_LIT_INT        shift, and go to state 39
    TK_LIT_FLOAT      shift, and go to state 40
    '-'               shift, and go to state 41
    '('               shift, and go to state 42
    '!'               shift, and go to state 43

    chamada_funcao  go to state 44
    expr1           go to state 67


State 44

   63 expr1: chamada_funcao •

    $default  reduce using rule 63 (expr1)


State 45

   34 comando_retorno: TK_PR_RETURN expressao •

    $default  reduce using rule 34 (comando_retorno)


State 46

   38 expressao: expr7 •
   39 expr7: expr7 • TK_OC_OR expr6

    TK_OC_OR  shift, and go to state 68

    $default  reduce using rule 38 (expressao)


State 47

   40 expr7: expr6 •
   41 expr6: expr6 • TK_OC_AND expr5

    TK_OC_AND  shift, and go to state 69

    $default  reduce using rule 40 (expr7)


State 48

   42 expr6: expr5 •
   43 expr5: expr5 • TK_OC_NE expr4
   44      | expr5 • TK_OC_EQ expr4

    TK_OC_EQ  shift, and go to state 70
    TK_OC_NE  shift, and go to state 71

    $default  reduce using rule 42 (expr6)


State 49

   45 expr5: expr4 •
   46 expr4: expr4 • '<' expr3
   47      | expr4 • '>' expr3
   48      | expr4 • TK_OC_LE expr3
   49      | expr4 • TK_OC_GE expr3

    TK_OC_LE  shift, and go to state 72
    TK_OC_GE  shift, and go to state 73
    '>'       shift, and go to state 74
    '<'       shift, and go to state 75

    $default  reduce using rule 45 (expr5)


State 50

   50 expr4: expr3 •
   51 expr3: expr3 • '+' expr2
   52      | expr3 • '-' expr2

    '-'  shift, and go to state 76
    '+'  shift, and go to state 77

    $default  reduce using rule 50 (expr4)


State 51

   53 expr3: expr2 •
   54 expr2: expr2 • '*' expr1
   55      | expr2 • '/' expr1
   56      | expr2 • '%' expr1

    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '%'  shift, and go to state 80

    $default  reduce using rule 53 (expr3)


State 52

   57 expr2: expr1 •

    $default  reduce using rule 57 (expr2)


State 53

   30 comando_atribuicao: TK_IDENTIFICADOR '=' • expressao

    TK_IDENTIFICADOR  shift, and go to state 38
    TK_LIT_INT        shift, and go to state 39
    TK_LIT_FLOAT      shift, and go to state 40
    '-'               shift, and go to state 41
    '('               shift, and go to state 42
    '!'               shift, and go to state 43

    chamada_funcao  go to state 44
    expressao       go to state 81
    expr7           go to state 46
    expr6           go to state 47
    expr5           go to state 48
    expr4           go to state 49
    expr3           go to state 50
    expr2           go to state 51
    expr1           go to state 52


State 54

   31 chamada_funcao: TK_IDENTIFICADOR '(' • lista_argumentos ')'

    TK_IDENTIFICADOR  shift, and go to state 38
    TK_LIT_INT        shift, and go to state 39
    TK_LIT_FLOAT      shift, and go to state 40
    '-'               shift, and go to state 41
    '('               shift, and go to state 42
    '!'               shift, and go to state 43

    chamada_funcao    go to state 44
    lista_argumentos  go to state 82
    expressao         go to state 83
    expr7             go to state 46
    expr6             go to state 47
    expr5             go to state 48
    expr4             go to state 49
    expr3             go to state 50
    expr2             go to state 51
    expr1             go to state 52


State 55

   27 identificador: TK_IDENTIFICADOR •
   28              | TK_IDENTIFICADOR • TK_OC_LE TK_LIT_FLOAT
   29              | TK_IDENTIFICADOR • TK_OC_LE TK_LIT_INT

    TK_OC_LE  shift, and go to state 84

    $default  reduce using rule 27 (identificador)


State 56

   24 declaracao_variavel: tipo lista_de_identificadores •

    $default  reduce using rule 24 (declaracao_variavel)


State 57

   25 lista_de_identificadores: identificador •
   26                         | identificador • ',' lista_de_identificadores

    ','  shift, and go to state 85

    $default  reduce using rule 25 (lista_de_identificadores)


State 58

   15 bloco_comandos: '{' sequencia_de_comandos '}' •

    $default  reduce using rule 15 (bloco_comandos)


State 59

   16 sequencia_de_comandos: comando_simples ';' •
   17                      | comando_simples ';' • sequencia_de_comandos

    TK_PR_INT         shift, and go to state 16
    TK_PR_FLOAT       shift, and go to state 17
    TK_PR_IF          shift, and go to state 18
    TK_PR_WHILE       shift, and go to state 19
    TK_PR_RETURN      shift, and go to state 20
    TK_IDENTIFICADOR  shift, and go to state 21
    '{'               shift, and go to state 9

    $default  reduce using rule 16 (sequencia_de_comandos)

    tipo                    go to state 23
    bloco_comandos          go to state 24
    sequencia_de_comandos   go to state 86
    comando_simples         go to state 26
    declaracao_variavel     go to state 27
    comando_atribuicao      go to state 28
    chamada_funcao          go to state 29
    comando_retorno         go to state 30
    comando_controle_fluxo  go to state 31


State 60

   12 parametro: TK_IDENTIFICADOR '<' '-' • tipo

    TK_PR_INT    shift, and go to state 16
    TK_PR_FLOAT  shift, and go to state 17

    tipo  go to state 87


State 61

   10 lista_de_parametros: lista_de_parametros TK_OC_OR parametro •

    $default  reduce using rule 10 (lista_de_parametros)


State 62

    8 cabecalho: TK_IDENTIFICADOR '=' lista_de_parametros '>' tipo •

    $default  reduce using rule 8 (cabecalho)


State 63

   35 comando_controle_fluxo: TK_PR_IF '(' expressao • ')' bloco_comandos
   36                       | TK_PR_IF '(' expressao • ')' bloco_comandos TK_PR_ELSE bloco_comandos

    ')'  shift, and go to state 88


State 64

   37 comando_controle_fluxo: TK_PR_WHILE '(' expressao • ')' bloco_comandos

    ')'  shift, and go to state 89


State 65

   58 expr1: '-' expr1 •

    $default  reduce using rule 58 (expr1)


State 66

   64 expr1: '(' expressao • ')'

    ')'  shift, and go to state 90


State 67

   59 expr1: '!' expr1 •

    $default  reduce using rule 59 (expr1)


State 68

   39 expr7: expr7 TK_OC_OR • expr6

    TK_IDENTIFICADOR  shift, and go to state 38
    TK_LIT_INT        shift, and go to state 39
    TK_LIT_FLOAT      shift, and go to state 40
    '-'               shift, and go to state 41
    '('               shift, and go to state 42
    '!'               shift, and go to state 43

    chamada_funcao  go to state 44
    expr6           go to state 91
    expr5           go to state 48
    expr4           go to state 49
    expr3           go to state 50
    expr2           go to state 51
    expr1           go to state 52


State 69

   41 expr6: expr6 TK_OC_AND • expr5

    TK_IDENTIFICADOR  shift, and go to state 38
    TK_LIT_INT        shift, and go to state 39
    TK_LIT_FLOAT      shift, and go to state 40
    '-'               shift, and go to state 41
    '('               shift, and go to state 42
    '!'               shift, and go to state 43

    chamada_funcao  go to state 44
    expr5           go to state 92
    expr4           go to state 49
    expr3           go to state 50
    expr2           go to state 51
    expr1           go to state 52


State 70

   44 expr5: expr5 TK_OC_EQ • expr4

    TK_IDENTIFICADOR  shift, and go to state 38
    TK_LIT_INT        shift, and go to state 39
    TK_LIT_FLOAT      shift, and go to state 40
    '-'               shift, and go to state 41
    '('               shift, and go to state 42
    '!'               shift, and go to state 43

    chamada_funcao  go to state 44
    expr4           go to state 93
    expr3           go to state 50
    expr2           go to state 51
    expr1           go to state 52


State 71

   43 expr5: expr5 TK_OC_NE • expr4

    TK_IDENTIFICADOR  shift, and go to state 38
    TK_LIT_INT        shift, and go to state 39
    TK_LIT_FLOAT      shift, and go to state 40
    '-'               shift, and go to state 41
    '('               shift, and go to state 42
    '!'               shift, and go to state 43

    chamada_funcao  go to state 44
    expr4           go to state 94
    expr3           go to state 50
    expr2           go to state 51
    expr1           go to state 52


State 72

   48 expr4: expr4 TK_OC_LE • expr3

    TK_IDENTIFICADOR  shift, and go to state 38
    TK_LIT_INT        shift, and go to state 39
    TK_LIT_FLOAT      shift, and go to state 40
    '-'               shift, and go to state 41
    '('               shift, and go to state 42
    '!'               shift, and go to state 43

    chamada_funcao  go to state 44
    expr3           go to state 95
    expr2           go to state 51
    expr1           go to state 52


State 73

   49 expr4: expr4 TK_OC_GE • expr3

    TK_IDENTIFICADOR  shift, and go to state 38
    TK_LIT_INT        shift, and go to state 39
    TK_LIT_FLOAT      shift, and go to state 40
    '-'               shift, and go to state 41
    '('               shift, and go to state 42
    '!'               shift, and go to state 43

    chamada_funcao  go to state 44
    expr3           go to state 96
    expr2           go to state 51
    expr1           go to state 52


State 74

   47 expr4: expr4 '>' • expr3

    TK_IDENTIFICADOR  shift, and go to state 38
    TK_LIT_INT        shift, and go to state 39
    TK_LIT_FLOAT      shift, and go to state 40
    '-'               shift, and go to state 41
    '('               shift, and go to state 42
    '!'               shift, and go to state 43

    chamada_funcao  go to state 44
    expr3           go to state 97
    expr2           go to state 51
    expr1           go to state 52


State 75

   46 expr4: expr4 '<' • expr3

    TK_IDENTIFICADOR  shift, and go to state 38
    TK_LIT_INT        shift, and go to state 39
    TK_LIT_FLOAT      shift, and go to state 40
    '-'               shift, and go to state 41
    '('               shift, and go to state 42
    '!'               shift, and go to state 43

    chamada_funcao  go to state 44
    expr3           go to state 98
    expr2           go to state 51
    expr1           go to state 52


State 76

   52 expr3: expr3 '-' • expr2

    TK_IDENTIFICADOR  shift, and go to state 38
    TK_LIT_INT        shift, and go to state 39
    TK_LIT_FLOAT      shift, and go to state 40
    '-'               shift, and go to state 41
    '('               shift, and go to state 42
    '!'               shift, and go to state 43

    chamada_funcao  go to state 44
    expr2           go to state 99
    expr1           go to state 52


State 77

   51 expr3: expr3 '+' • expr2

    TK_IDENTIFICADOR  shift, and go to state 38
    TK_LIT_INT        shift, and go to state 39
    TK_LIT_FLOAT      shift, and go to state 40
    '-'               shift, and go to state 41
    '('               shift, and go to state 42
    '!'               shift, and go to state 43

    chamada_funcao  go to state 44
    expr2           go to state 100
    expr1           go to state 52


State 78

   54 expr2: expr2 '*' • expr1

    TK_IDENTIFICADOR  shift, and go to state 38
    TK_LIT_INT        shift, and go to state 39
    TK_LIT_FLOAT      shift, and go to state 40
    '-'               shift, and go to state 41
    '('               shift, and go to state 42
    '!'               shift, and go to state 43

    chamada_funcao  go to state 44
    expr1           go to state 101


State 79

   55 expr2: expr2 '/' • expr1

    TK_IDENTIFICADOR  shift, and go to state 38
    TK_LIT_INT        shift, and go to state 39
    TK_LIT_FLOAT      shift, and go to state 40
    '-'               shift, and go to state 41
    '('               shift, and go to state 42
    '!'               shift, and go to state 43

    chamada_funcao  go to state 44
    expr1           go to state 102


State 80

   56 expr2: expr2 '%' • expr1

    TK_IDENTIFICADOR  shift, and go to state 38
    TK_LIT_INT        shift, and go to state 39
    TK_LIT_FLOAT      shift, and go to state 40
    '-'               shift, and go to state 41
    '('               shift, and go to state 42
    '!'               shift, and go to state 43

    chamada_funcao  go to state 44
    expr1           go to state 103


State 81

   30 comando_atribuicao: TK_IDENTIFICADOR '=' expressao •

    $default  reduce using rule 30 (comando_atribuicao)


State 82

   31 chamada_funcao: TK_IDENTIFICADOR '(' lista_argumentos • ')'

    ')'  shift, and go to state 104


State 83

   32 lista_argumentos: expressao • ',' lista_argumentos
   33                 | expressao •

    ','  shift, and go to state 105

    $default  reduce using rule 33 (lista_argumentos)


State 84

   28 identificador: TK_IDENTIFICADOR TK_OC_LE • TK_LIT_FLOAT
   29              | TK_IDENTIFICADOR TK_OC_LE • TK_LIT_INT

    TK_LIT_INT    shift, and go to state 106
    TK_LIT_FLOAT  shift, and go to state 107


State 85

   26 lista_de_identificadores: identificador ',' • lista_de_identificadores

    TK_IDENTIFICADOR  shift, and go to state 55

    lista_de_identificadores  go to state 108
    identificador             go to state 57


State 86

   17 sequencia_de_comandos: comando_simples ';' sequencia_de_comandos •

    $default  reduce using rule 17 (sequencia_de_comandos)


State 87

   12 parametro: TK_IDENTIFICADOR '<' '-' tipo •

    $default  reduce using rule 12 (parametro)


State 88

   35 comando_controle_fluxo: TK_PR_IF '(' expressao ')' • bloco_comandos
   36                       | TK_PR_IF '(' expressao ')' • bloco_comandos TK_PR_ELSE bloco_comandos

    '{'  shift, and go to state 9

    bloco_comandos  go to state 109


State 89

   37 comando_controle_fluxo: TK_PR_WHILE '(' expressao ')' • bloco_comandos

    '{'  shift, and go to state 9

    bloco_comandos  go to state 110


State 90

   64 expr1: '(' expressao ')' •

    $default  reduce using rule 64 (expr1)


State 91

   39 expr7: expr7 TK_OC_OR expr6 •
   41 expr6: expr6 • TK_OC_AND expr5

    TK_OC_AND  shift, and go to state 69

    $default  reduce using rule 39 (expr7)


State 92

   41 expr6: expr6 TK_OC_AND expr5 •
   43 expr5: expr5 • TK_OC_NE expr4
   44      | expr5 • TK_OC_EQ expr4

    TK_OC_EQ  shift, and go to state 70
    TK_OC_NE  shift, and go to state 71

    $default  reduce using rule 41 (expr6)


State 93
